demux: mkv: make sure the first cluster has a timestamp for an infinite Cluster

We don't use the Cluster otherwise and can read at all.

Ref #28653